--- a/style.css
+++ b/style.css
@@ -394,7 +394,13 @@ ol {
   text-align: center;
   padding: 0 2%;
 }
+
 @media (max-width: 720px) {
+  .container .tt {
+    display: block;
+  }
+  
+@media (max-width: 780px) {
   .hero:before {
     position: absolute;
     top: 0;
