--- a/style.css
+++ b/style.css
@@ -414,7 +414,7 @@ ol {
   }
   .header__logo {
     top: 0;
-    left: 50;
+    left: 50px;
   }
 }
 
@@ -460,6 +460,9 @@ ol {
     margin-bottom: 40px;
     font-size: 30px;
     text-align: center;
+  }
+  .icon-decor {
+    top: 100px;
   }
 }
 
