--- a/style.css
+++ b/style.css
@@ -3,6 +3,15 @@
   padding: 0;
 }
 
+textarea:focus, input:focus{
+  outline: none;
+}
+
+a:focus {
+  outline: none;
+  border-bottom: 1px solid #00f;
+}
+
 body {
   background: #fff;
   font-family: "Ubuntu", sans-serif;
@@ -37,6 +46,12 @@ body {
   text-decoration: none;
   color: #fff;
   opacity: 0.6;
+}
+
+.header__phone:hover, 
+.header__call:hover {
+  opacity: 1;
+  transition: opacity .3s ease;
 }
 
 .header__logo {
@@ -84,6 +99,13 @@ body {
   font-weight: 600;
 }
 
+.container ul {
+  list-style-type: none;
+}
+
+.nav a:hover {
+  border-bottom: 2px solid silver;
+}
 @media only screen and (max-width: 720px) {
   .nav {
     position: static;
@@ -94,7 +116,7 @@ body {
 
 @media only screen and (max-width: 720px) {
   .nav li {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     text-align: center;
     font-size: 25px;
   }
@@ -250,8 +272,12 @@ body {
   background-repeat: no-repeat;
   display: inline-block;
   position: relative;
+  margin-bottom: 20px;
 }
 
+.t__position {
+  margin-bottom: 20px;
+}
 .t__photo:before {
   content: " ";
   position: absolute;
@@ -265,12 +291,49 @@ body {
   background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAHh0lEQ…mAfL+eAeDbw5HbNwAiD5Dv1zMAfHs4cvsGQOQB8v16/wIomgSfYrLgaQAAAABJRU5ErkJggg==);
 }
 
+.apart__photo {
+  position: relative;
+  overflow: hidden;
+}
+.apart__photo::before {
+	position: absolute;
+	top: 0;
+	left: -75%;
+	z-index: 2;
+	display: block;
+	content: '';
+	width: 50%;
+	height: 100%;
+	background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
+	background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
+	-webkit-transform: skewX(-25deg);
+	transform: skewX(-25deg);
+}
+.apart__photo:hover::before {
+	-webkit-animation: shine .75s;
+	animation: shine .75s;
+}
+@-webkit-keyframes shine {
+	100% {
+		left: 125%;
+	}
+}
+@keyframes shine {
+	100% {
+		left: 125%;
+	}
+}
+
 .textual {
   font-size: 16px;
   line-height: 1.5;
   color: #000;
 }
 
+.t__descr {
+  line-height: 1.5em;
+  margin-bottom: 20px;
+}
 h2 {
   font-size: 32px;
   line-height: 1.1;
@@ -285,6 +348,11 @@ ol {
   position: relative;
   left: -5px;
 }
+
+ol li {
+  list-style-position: inside;
+}
+
 .input,
 .textarea {
   text-align: center;
@@ -340,6 +408,15 @@ ol {
   width: 100%;
 }
 
+.button:hover {
+  background: #eeeeee;
+  color: #393939;
+  text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
+  -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+  -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+  transition: all 0.4s ease 0s;
+}
+
 .button_inline {
   display: inline-block;
   padding: 0 60px;
@@ -390,11 +467,26 @@ ol {
 .testis {
   display: flex;
   justify-content: space-between;
+  margin: 0 20px 20px 20px;
 }
 
 .t {
   text-align: center;
   padding: 0 2%;
+}
+
+.textual_big a {
+  text-decoration: none;
+  color: #000;
+}
+
+.textual_big a:hover {
+  text-decoration: underline #000;
+}
+
+.textual_big {
+  font-size: 24px;
+  line-height: 1.3;
 }
 
 @media (max-width: 720px) {
@@ -466,12 +558,6 @@ ol {
   }
 }
 
-@media only screen and (max-width: 720px) {
-  .apart__photo {
-    height: 100px;
-  }
-}
-
 @media only screen and (max-width: 980px) {
   .container {
     margin: 0 20px;
@@ -483,5 +569,21 @@ ol {
   .section__right {
     float: none;
     width: auto;
+    text-align: center;
   }
+  .apart__photos {
+    display: block;
+  }
+  .apart__photo {
+    height: 300px;
+    margin-bottom: 10px;
+  }
+  .apart__photo:first-child {
+    margin-right: 0;
+  }
+  .apart_mod-left .apart__photo:last-child {
+    -ms-flex: 2;
+    flex: 2;
+  }
+  
 }
